# tax_calculator

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
